Bugfix: Select entire line in TreeView again and make scrollbar from TreeView fullscreen again (#72)
Select entire line in TreeView again

--- a/client/src/Components/TreeView/TreeView.module.css
+++ b/client/src/Components/TreeView/TreeView.module.css
@@ -1,9 +1,8 @@
 .treeView {
     border-right: 1px solid gray;
-    margin: 1rem;
     overflow: auto;
 }
 
 .packageName {
-    margin-bottom: 1rem;
+    margin: 1rem;
 }
